[package]
name = "dualZoneCli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full", "tracing"] }
crossterm = "0.22.0"
derive_getters = { path = "C:/Users/bsm/Documents/Internal SW/Rust Projects/myMacros/firstMacro/derive_getters" }
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
